--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,6 +1,5 @@
 ﻿.cover__link {
-  z-index: 0;
-  background-image: url(../../../images/__background.jpg);
+  background-image: linear-gradient(rgba(42, 44, 47, 0.3), rgba(42, 44, 47, 0.3)), url(../../../images/__background.jpg);
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -11,27 +10,40 @@
   min-height: 740px;
   background-repeat: no-repeat;
   background-size: cover;
-  transition: opacity .2s linear;
+  position: relative;
+  z-index: 1;
 }
 
-.cover__link:hover {
+.cover__link::before {
+  content: " ";
+  background: #2A2C2F;
   opacity: .3;
-  z-index: 0;
+  transition: opacity 0.5s ease-in-out;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
-@media screen and (max-width: 1280px) {
+.cover__link:hover::before {
+  opacity: .6;
+}
+
+@media screen and (max-width: 1279px) {
   .cover__link {
     min-height: 620px;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .cover__link {
     min-height: 480px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .cover__link {
     min-height: 200px;
   }
