--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,15 +1,15 @@
 ﻿.cover__title {
   max-width: 560px;
   margin: 0;
+  padding: 0;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
   color: #FFFFFF;
-  z-index: 1;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .cover__title {
     max-width: 248px;
     font-size: 32px;
