--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,6 +6,7 @@
   text-align: right;
   color: #FFFFFF;
   margin: 0;
+  padding: 0;
   align-self: center;
 }
 
@@ -14,6 +15,5 @@
     align-self: flex-start;
     padding-top: 48px;
     padding-left: 16px;
-    padding-bottom: 24px;
   }
 }
