--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,13 +3,14 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  column-gap: 18px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__links {
-    margin: 0;
     flex-direction: column;
     max-width: 186px;
     padding-left: 16px;
+    row-gap: 32px;
   }
 }
