--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,20 +5,20 @@
   line-height: 163%;
   color: #FFFFFF;
   max-width: 690px;
+  margin: 0;
+  padding: 0;
   padding-top: 40px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .intro__text {
     max-width: 720px;
     margin: 0 auto;
-    padding-top: 40px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .intro__text {
     max-width: 288px;
-    padding-top: 40px;
   }
 }
