--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,6 @@
 ﻿.intro__title {
   margin: 0;
+  padding: 0;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
@@ -7,9 +8,9 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .intro__title {
-    font-size: 54px;
-    line-height: 58px;
+    font-size: 32px;
+    line-height: 35px;
   }
 }
