--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,19 +6,20 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   color: #FFFFFF;
+  margin: 0;
+  padding: 0;
   padding-top: 8px;
   text-align: left;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .lead__caption {
     padding-left: 24px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .lead__caption {
-    margin: 0;
     padding-left: 16px;
   }
 }
