--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,11 +6,12 @@
   color: #FFFFFF;
   text-align: center;
   max-width: 640px;
+  padding: 0;
   padding-top: 32px;
   margin: 0 auto;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
     padding-top: 16px;
     font-size: 16px;
