--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,6 @@
 ﻿.place__paragraph {
   margin: 0;
+  padding: 0;
   padding-bottom: 24px;
   font-style: normal;
   font-weight: 400;
@@ -8,7 +9,7 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
