--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,9 +7,10 @@
   color: #FFFFFF;
   align-self: end;
   margin: 0;
+  padding: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .place__title {
     max-width: 440px;
     font-size: 42px;
@@ -17,7 +18,7 @@
  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .place__title {
     font-size: 32px;
     line-height: 35px;
