--- a/blocks/place/__website-heading/place__website-heading.css
+++ b/blocks/place/__website-heading/place__website-heading.css
@@ -1,9 +1,12 @@
 .place__website-heading {
-    margin-bottom: 12px;
-    color: #aaa;
-    font-style:  normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 20px;
-    letter-spacing: 3px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 12px;
+  color: #aaa;
+  font-style:  normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
   }
