--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,5 +1,5 @@
 ﻿.cover__link {
-  background-image: linear-gradient(rgba(42, 44, 47, 0.3), rgba(42, 44, 47, 0.3)), url(../../../images/__background.jpg);
+  background-image: url(../../../images/__background.jpg);
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -28,12 +28,12 @@
 }
 
 .cover__link:hover::before {
-  opacity: .6;
+  opacity: .8;
 }
 
 @media screen and (max-width: 1279px) {
   .cover__link {
-    min-height: 620px;
+    min-height: 640px;
   }
 }
 
