--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 ﻿.cover__subtitle {
   max-width: 360px;
-  margin: 32px auto;
+  margin: 32px auto 0;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -14,6 +14,6 @@
     max-width: 288px;
     font-size: 14px;
     line-height: 16px;
-    margin: 16px auto;
+    margin: 16px auto 0;
   }
 }
