--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,26 +1,4 @@
-﻿@font-face {
-  font-family: "Inter";
-  src: url("../../fonts/Inter-Black.woff2") format("woff2");
-  font-weight: 900;
-  font-display: swap;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("../../fonts/Inter-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-display: swap;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("../../fonts/Inter-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-display: swap;
-  font-style: normal;
-}
-
-.page {
+﻿.page {
   margin: 0;
   padding: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
