--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 ﻿@import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../fonts/fonts.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
@@ -25,7 +26,6 @@
 @import url(../blocks/place/__website-link/place__website-link.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
