--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -17,6 +17,14 @@
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
-    padding: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    padding: 0 16px;
+  }
+  .place__paragraph:last-of-type {
+    padding: 25px 16px 0;
   }
 }
