--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -22,9 +22,9 @@
 
 @media screen and (max-width: 767px) {
   .place__paragraph {
-    padding: 0 16px;
+    padding: 0 16px 25px;
   }
   .place__paragraph:last-of-type {
-    padding: 25px 16px 0;
+    padding: 0 16px;
   }
 }
